# remotevideosystem

./: README.md  opencv_test2  opencv_test2.cpp  test.c
project/: opencv_motion_server  opencv_motion_server.cpp  opencv_test2  opencv_test2.cpp
project/beagley-server/: package-lock.json  server.js
project/beagley-server/clips/: clip_20251201_211648.avi  clip_20251201_211657.avi  clip_20251201_211707.avi  clip_20251201_211716.avi  clip_20251201_211725.avi
project/beagley-server/public/: index.html
project/motiondetect/: CMakeLists.txt  audiocap.cpp  beagley-toolchain.cmake  mic_cap  motioncam  opencv_test2.cpp
project/servo/cmake_starter/app/: CMakeLists.txt
project/servo/cmake_starter/app/src/: main.c
project/servo/cmake_starter/hal/include/: rotaryButton.h
project/servo/cmake_starter/hal/include/hal/: joystick.h  servo.h
project/servo/cmake_starter/hal/src/: joystick.c  rotaryButton.c  servo.c
project/servo/remotevideosystem-test/: opencv_test2  opencv_test2.cpp
project/servo/remotevideosystem-test/project/beagley-server/: package.json  server.js
project/servo/remotevideosystem-test/project/servo/cmake_starter/: CMakeLists.txt  run.sh
project/servo/remotevideosystem-test/project/servo/cmake_starter/app/: CMakeLists.txt
project/servo/remotevideosystem-test/project/servo/cmake_starter/app/src/: main.c
project/servo/remotevideosystem-test/project/servo/cmake_starter/hal/: CMakeLists.txt
project/servo/remotevideosystem-test/project/servo/cmake_starter/hal/src/: joystick.c
